[gd_scene load_steps=3 format=2]

[ext_resource path="res://nightscript/debug/debug.gd" type="Script" id=1]
[ext_resource path="res://nightscript/debug/theme.tres" type="Theme" id=2]

[node name="Debug" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParseTimer" type="Timer" parent="."]
one_shot = true

[node name="InputEdit" type="TextEdit" parent="."]
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
highlight_all_occurrences = true
context_menu_enabled = false

[node name="OutputEdit" type="TextEdit" parent="."]
visible = false
margin_left = 322.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
readonly = true
highlight_current_line = true
show_line_numbers = true
highlight_all_occurrences = true
context_menu_enabled = false
virtual_keyboard_enabled = false

[connection signal="timeout" from="ParseTimer" to="." method="_on_parse_timer_timeout"]
[connection signal="text_changed" from="InputEdit" to="." method="_on_input_edit_text_changed"]
